--- a/marmot_logging_config.yml
+++ b/marmot_logging_config.yml
@@ -4,7 +4,7 @@ formatters:
     format: '%(asctime)s:%(levelname)-8s- %(message)s'
     datefmt: '%Y-%m-%d %H:%M:%S'
   warning_format:
-    format: '%(asctime)s:%(levelname)s:%(name)s - %(message)s'
+    format: '%(asctime)s:%(levelname)s:%(module)s.%(funcName)s - %(message)s'
     datefmt: '%Y-%m-%d %H:%M:%S'
 
 handlers:
