--- a/marmot-env.yml
+++ b/marmot-env.yml
@@ -2,31 +2,31 @@ name: marmot-env
 channels:
   - defaults
 dependencies:
-  - python=3.7.4=h5263a28_0
-  - h5py=2.10.0=py37h5e291fa_0
-  - hdf5=1.10.4=h7ebc959_0
-  - html5lib=1.1=py_0
-  - importlib-metadata=1.7.0=py37_0
-  - importlib_metadata=1.7.0=0
-  - json5=0.9.5=py_0
-  - jsonschema=3.2.0=py37_0
+  - python=3.7.4
+  - h5py=2.10.0
+  - hdf5=1.10.4
+  - html5lib=1.1
+  - importlib-metadata=1.7.0
+  - importlib_metadata=1.7.0
+  - json5=0.9.5
+  - jsonschema=3.2.0
   - matplotlib=3.2.2
-  - numba=0.45.1=py37hf9181ef_0
-  - numexpr=2.7.0=py37hdce8814_0
-  - numpy=1.18.1=py37h93ca92e_0
-  - numpy-base=1.18.1=py37hc3f5095_1
-  - numpydoc=1.1.0=py_0
+  - numba=0.45.1
+  - numexpr=2.7.0
+  - numpy=1.18.1
+  - numpy-base=1.18.1
+  - numpydoc=1.1.0
   - pandas=1.1.3
-  - pip=20.1.1=py37_1
-  - seaborn=0.9.0=py37_0
-  - sqlalchemy=1.3.18=py37he774522_0
-  - sqlite=3.32.3=h2a8f88b_0
-  - scipy=1.3.1=py37h29ff71c_0
-  - path=13.1.0=py37_0
-  - path.py=12.4.0=0
-  - pathlib2=2.3.5=py37_0
+  - pip=20.1.1
+  - seaborn=0.9.0
+  - sqlalchemy=1.3.18
+  - sqlite=3.32.3
+  - scipy=1.3.1
+  - path=13.1.0
+  - path.py=12.4.0
+  - pathlib2=2.3.5
   - pytables=3.6.1
-  - yaml=0.2.5=he774522_0
+  - yaml=0.2.5
   - blosc=1.16.3
   - Cython=0.29.2
   - pip:
