--- a/marmot-env.yml
+++ b/marmot-env.yml
@@ -25,6 +25,7 @@ dependencies:
   - path=13.1.0
   - path.py=12.4.0
   - pathlib2=2.3.5
+  - pandoc=2.2.3.2=0
   - pytables=3.6.1
   - yaml=0.2.5
   - blosc=1.16.3
