--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ marmot/input_files/mapping_folder/*
 !marmot/input_files/mapping_folder/Region_mapping_ReEDS.csv
 !marmot/input_files/mapping_folder/Regions_Zones_Mapping_Full.csv
 marmot-env-JW.yml
+config.yml
