--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ gdxcc==8.33.2.post1
 gdxpds==1.2.0
 h5py==2.10.0
 kiwisolver==1.3.2
-matplotlib==3.3.4
+matplotlib==3.3.4 #upgrade to 3.7.1
 mock==4.0.3
 numexpr==2.8.1
 numpy==1.21.5
