--- a/marmot-mac10.yml
+++ b/marmot-mac10.yml
@@ -1,66 +1,65 @@
 name: marmot-mac
 channels:
-  - defaults
+  - conda-forge
 dependencies:
-  - blas=1.0=mkl
-  - blosc=1.21.0=h2842e9f_0
-  - bottleneck=1.3.4=py38h67323c0_0
-  - bzip2=1.0.8=h1de35cc_0
-  - ca-certificates=2022.3.18=hecd8cb5_0
-  - certifi=2021.10.8=py38hecd8cb5_2
-  - cycler=0.11.0=pyhd3eb1b0_0
-  - freetype=2.11.0=hd8bbffd_0
-  - giflib=5.2.1=haf1e3a3_0
-  - h5py=2.10.0=py38h3134771_0
-  - hdf5=1.10.4=hfa1e0ec_0
-  - intel-openmp=2021.4.0=hecd8cb5_3538
-  - jpeg=9d=h9ed2024_0
-  - kiwisolver=1.3.2=py38he9d5cce_0
-  - lcms2=2.12=hf1fd2bf_0
-  - libcxx=12.0.0=h2f01273_0
-  - libffi=3.3=hb1e8313_2
-  - libgfortran=3.0.1=h93005f0_2
-  - libpng=1.6.37=ha441bb4_0
-  - libtiff=4.2.0=h87d7836_0
-  - libwebp=1.2.2=h56c3ce4_0
-  - libwebp-base=1.2.2=hca72f7f_0
-  - lz4-c=1.9.3=h23ab428_1
-  - lzo=2.10=haf1e3a3_2
-  - matplotlib=3.3.4=py38hecd8cb5_0
-  - matplotlib-base=3.3.4=py38h8b3ea08_0
-  - mkl=2021.4.0=hecd8cb5_637
-  - mkl-service=2.4.0=py38h9ed2024_0
-  - mkl_fft=1.3.1=py38h4ab4a9b_0
-  - mkl_random=1.2.2=py38hb2f4e1b_0
-  - mock=4.0.3=pyhd3eb1b0_0
-  - ncurses=6.3=hca72f7f_2
-  - numexpr=2.8.1=py38h2e5f0a9_0
-  - numpy=1.21.2=py38h4b4dc7a_0
-  - numpy-base=1.21.2=py38he0bd621_0
-  - openssl=1.1.1n=hca72f7f_0
-  - packaging=21.3=pyhd3eb1b0_0
-  - pandas=1.4.1=py38he9d5cce_1
-  - pillow=9.0.1=py38hde71d04_0
-  - pip=21.2.4=py38hecd8cb5_0
-  - pyparsing=3.0.4=pyhd3eb1b0_0
-  - pytables=3.6.1=py38h4727e94_0
-  - python=3.8.8=h88f2d9e_5
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - pytz=2021.3=pyhd3eb1b0_0
-  - pyyaml=6.0=py38hca72f7f_1
-  - readline=8.1.2=hca72f7f_1
-  - setuptools=58.0.4=py38hecd8cb5_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - sqlite=3.37.2=h707629a_0
-  - tk=8.6.11=h7bc2e8c_0
-  - tornado=6.1=py38h9ed2024_0
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - xz=5.2.5=h1de35cc_0
-  - yaml=0.2.5=haf1e3a3_0
-  - zlib=1.2.11=h4dc903c_4
-  - zstd=1.4.9=h322a384_0
+  - blas==1.0
+  - blosc==1.21.0
+  - bottleneck==1.3.4
+  - bzip2==1.0.8
+  - ca-certificates==2022.3.18
+  - certifi==2021.10.8
+  - cycler==0.11.0
+  - freetype==2.11.0
+  - giflib==5.2.1
+  - h5py==2.10.0
+  - hdf5==1.10.4
+  - intel-openmp==2021.4.0
+  - jpeg==9d0
+  - kiwisolver==1.3.2
+  - lcms2==2.12
+  - libcxx==12.0.0
+  - libffi==3.3
+  - libgfortran==3.0.1
+  - libpng==1.6.37
+  - libtiff==4.2.0
+  - libwebp==1.2.2
+  - libwebp-base==1.2.2
+  - lz4-c==1.9.3
+  - lzo==2.10
+  - matplotlib==3.3.4
+  - matplotlib-base==3.3.4
+  - mkl==2021.4.0
+  - mkl-service==2.4.0
+  - mkl_fft==1.3.1
+  - mkl_random==1.2.2
+  - mock==4.0.3
+  - ncurses==6.3
+  - numexpr==2.8.1
+  - numpy==1.21.2
+  - numpy-base==1.21.2
+  - openssl==1.1.1n
+  - packaging==21.3
+  - pandas=1.4.1
+  - pillow==9.0.1
+  - pip==21.2.4
+  - pyparsing==3.0.4
+  - pytables==3.6.1
+  - python==3.8.8
+  - python-dateutil==2.8.2
+  - pytz==2021.3
+  - pyyaml==6.0
+  - readline==8.1.2
+  - setuptools==58.0.4
+  - six==1.16.0
+  - sqlite==3.37.2
+  - tk==8.6.11
+  - tornad==6.1
+  - wheel==0.37.1
+  - xz==5.2.5
+  - yaml==0.2.5
+  - zlib==1.2.11
+  - zstd==1.4.9
   - pip:
     - future==0.18.2
     - gdxcc==8.33.2.post1
     - gdxpds==1.2.0
-prefix: /Users/mschwarz/miniconda3/envs/marmot-mac
